nav web component apply

--- a/index.html
+++ b/index.html
@@ -55,47 +55,7 @@
       <div class="site-mobile-menu-body"></div>
     </div>
 
-    <nav class="site-nav">
-      <div class="container">
-        <div class="site-navigation">
-          <a href="index.html" class="logo float-left m-0"
-            >ESC <span class="text-primary">.</span></a
-          >
-
-          <ul class="js-clone-nav d-none d-lg-inline-noone text-left site-menu">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li class="has-children">
-              <a href="/blog.html">Archive</a>
-              <ul class="dropdown">
-                <li><a href="single.html">Project 1</a></li>
-                <li><a href="single.html">Project 2</a></li>
-
-                <!-- <li class="has-children">
-                  <a href="#">Menu Two</a>
-                  <ul class="dropdown">
-                    <li><a href="#">Sub Menu One</a></li>
-                    <li><a href="#">Sub Menu Two</a></li>
-                    <li><a href="#">Sub Menu Three</a></li>
-                  </ul>
-                </li> -->
-                <!-- <li><a href="#">Menu Three</a></li> -->
-              </ul>
-            </li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-          </ul>
-
-          <a
-            href="#"
-            class="burger ml-auto float-right site-menu-toggle js-menu-toggle d-inline-block d-lg-block"
-            data-toggle="collapse"
-            data-target="#main-navbar"
-          >
-            <span></span>
-          </a>
-        </div>
-      </div>
-    </nav>
+    <site-nav></site-nav>
 
     <div class="custom-hero">
       <div class="container">
@@ -921,5 +881,6 @@
     <script src="js/debug.addIndicators.min.js"></script>
 
     <script src="js/custom.js"></script>
+    <script src="js/custom-nav.js"></script>
   </body>
 </html>
