배경에 까만 선 제거

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
     <title>Style Free HTML Template by Untree.co</title>
   </head>
   <body scroll="no">
-    <div class="lines-wrap">
+    <!-- <div class="lines-wrap">
       <div class="lines-inner">
         <div class="lines"></div>
       </div>
-    </div>
+    </div> -->
     <!-- END lines -->
 
     <div class="site-mobile-menu site-navbar-target">
