--- a/index.html
+++ b/index.html
@@ -760,16 +760,16 @@
 
     <div class="site-footer">
       <div class="container">
-        <div class="row justify-content-between">
+        <div class="row justify-content-center">
           <div class="col-lg-4">
-            <div class="widget">
+            <!-- <div class="widget">
               <h3>About</h3>
               <p>
                 Far far away, behind the word mountains, far from the countries
                 Vokalia and Consonantia, there live the blind texts. Separated
                 they live.
               </p>
-            </div>
+            </div> -->
             <div class="widget">
               <h3>Connect with us</h3>
               <ul class="social list-unstyled">
@@ -791,7 +791,7 @@
               </ul>
             </div>
           </div>
-          <div class="col-lg-6">
+          <!-- <div class="col-lg-6">
             <div class="row">
               <div class="col-12">
                 <div class="widget">
@@ -832,7 +832,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
         <div class="row justify-content-center text-center copyright">
