프로젝트 2 임시커밋

--- a/project2.html
+++ b/project2.html
@@ -38,13 +38,7 @@
     <title>Style Free HTML Template by Untree.co</title>
   </head>
   <body>
-    <div class="lines-wrap">
-      <div class="lines-inner">
-        <div class="lines"></div>
-      </div>
-    </div>
     <!-- END lines -->
-
     <div class="site-mobile-menu site-navbar-target">
       <div class="site-mobile-menu-header">
         <div class="site-mobile-menu-close">
@@ -60,12 +54,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h1 class="hero-heading">VS Code Extensions for HTML</h1>
+            <h1 class="hero-heading">ESC Art club : 김덕한 작가</h1>
             <div class="line js-line mx-auto mb-3 my-3"></div>
-            <p class="sub-text">
-              By Joefrey Mahusay <span class="mx-3">&bullet;</span> on Jun 13,
-              2021
-            </p>
+            <p class="sub-text">on Aug 22, 2024</p>
           </div>
         </div>
       </div>
@@ -76,80 +67,92 @@
         <div class="row justify-content-center align-items-stretch">
           <article class="col-lg-8 order-lg-2 px-lg-5">
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean.
+              지난 목요일(8/22 7:40 PM) 모기도 입이 삐뚤어진다는 절기인 처서에
+              ESC의 두 번째 행사 &lt;과거, 현재 그리고 나&gt; 가 진행되었습니다.
+              가을이라기엔 아직 무더운 날씨였지만, 더 뜨거운 열정과 함께
+              참여해주신 분들 덕분에 뜻 깊은 행사가 될 수 있었습니다.
             </p>
+            <img
+              src="images/project2/project2-1.png"
+              alt="Image"
+              class="img-fluid"
+            />
+            <p>
+              ESC의 두 번째 행사는 김덕한 작가님의 직접 설치하신 작품 관람과
+              작업 과정에 대한 설명 및 체험으로 이루어졌습니다. 작가님께서 10년
+              만에 직접 설치하신 작품을 감상하고, 작업의 시작 과정에 대한 설명과
+              직접 작업 과정을 체험해 보는 귀한 시간을 청담 ’미스페이스
+              쇼룸‘에서 가졌습니다
+            </p>
+            <img
+              src="images/project2/project2-2.png"
+              alt="Image"
+              class="img-fluid"
+            />
+            <p>
+              김덕한 작가님은 ‘시간의 중첩과 반복적 행위’라는 한국의 단색화
+              철학을 공유하면서도 ‘쌓아 올린 것을 다시 벗겨내는’ 독보적인
+              작업방식을 선보이고 있습니다. 옻칠의 특성상 수십 번 갈아내야
+              비로소 깊은 내면의 색이 드러나는데, 정적인 작품 속에는 작가님의
+              에너지가 응집되어 있습니다.
+            </p>
+            <img
+              src="images/project2/project2-3.png"
+              alt="Image"
+              class="img-fluid"
+            />
+            <p>
+              \김덕한 작가님은 기억과 경험에서 추출한 색을 바탕으로 화면을 쌓아
+              올리는 것에 그치지 않고, 다시 갈아내는 반복적인 작업을 통해 과거와
+              현재가 동일 선상에 있길 바라면서 작업을 합니다. 작가님은
+              관람객께서 각 개인이 경험했던 색에 대한 추억과 그 이미지를 자신의
+              작품을 통해서 함께 찾아서 파헤쳐 보는 “시간여행”을 느끼길
+              바라신다며, 이 날 체험의 깊이를 더해주셨습니다.
+            </p>
+            <img
+              src="images/project2/project2-4.png"
+              alt="Image"
+              class="img-fluid"
+            />
+            <p>
+              옻칠 작업을 더해서 레이어를 쌓는 것만이 아닌, 쌓여 올려진 옻칠
+              레이어를 도구와 저희의 움직임으로 ‘벗겨내는 과정’을 통해 스스로의
+              행위를 돌아보는 의미있는 시간이었습니다. 직접 작업한 작품에는
+              본인과 김덕한 작가님의 서명이 더해져 세상에 단 하나뿐인 콜라보
+              작품이 완성되었습니다!
+            </p>
+            <img
+              src="images/project2/project2-5.png"
+              alt="Image"
+              class="img-fluid"
+            />
 
             <p>
-              A small river named Duden flows by their place and supplies it
-              with the necessary regelialia. It is a paradisematic country, in
-              which roasted parts of sentences fly into your mouth.
+              이후, 새벽 3시까지 이어진 뒤풀이 자리에서 준비된 음식들을 즐기며,
+              같은 작업을 어떻게 다르게 해석했는지를 함께 나누었습니다.
             </p>
-
-            <h3>Even the all-powerful...</h3>
+            <img
+              src="images/project2/project2-6.png"
+              alt="Image"
+              class="img-fluid"
+            />
             <p>
-              Even the all-powerful Pointing has no control about the blind
-              texts it is an almost unorthographic life One day however a small
-              line of blind text by the name of Lorem Ipsum decided to leave for
-              the far World of Grammar.
+              이번 행사는 Art를 소재로 각 분야의 멋진 분들과 만나는 이벤트를
+              기획해보았습니다. 앞으로 다양한 행사를 소개하고 기록해나갈 ESC를
+              기대해주세요.
             </p>
-
+            <img
+              src="images/project2/project2-7.png"
+              alt="Image"
+              class="img-fluid"
+            />
             <p>
-              The Big Oxmox advised her not to do so, because there were
-              thousands of bad Commas, wild Question Marks and devious Semikoli,
-              but the Little Blind Text didn’t listen. She packed her seven
-              versalia, put her initial into the belt and made herself on the
-              way.
+              기획 : 양지영, 황나경, 김은호, 이동령 촬영 : 김호근 협찬 :<br />
+              <a href="https://www.instagram.com/mespace_studio/"
+                >미스페이스 청담Instagram</a
+              ><br />
+              <a href="https://mespaceshowroom.com/">미스페이스청담 website</a>
             </p>
-
-            <p>
-              When she reached the first hills of the Italic Mountains, she had
-              a last view back on the skyline of her hometown Bookmarksgrove,
-              the headline of Alphabet Village and the subline of her own road,
-              the Line Lane. Pityful a rethoric question ran over her cheek,
-              then she continued her way.
-            </p>
-
-            <h3>On her way she met a copy</h3>
-            <p>
-              Separated they live in Bookmarksgrove right at the coast of the
-              Semantics, a large language ocean.
-            </p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              with the necessary regelialia.
-            </p>
-            <p>
-              And if she hasn’t been rewritten, then they are still using her.
-              On her way she met a copy. The copy warned the Little Blind Text,
-              that where it came from it would have been rewritten a thousand
-              times and everything that was left from its origin would be the
-              word "and" and the Little Blind Text should turn around and return
-              to its own, safe country.
-            </p>
-
-            <p>
-              But nothing the copy said could convince her and so it didn’t take
-              long until a few insidious Copy Writers ambushed her, made her
-              drunk with Longe and Parole and dragged her into their agency,
-              where they abused her for their.
-            </p>
-
-            <p>
-              Separated they live in Bookmarksgrove right at the coast of the
-              Semantics, a large language ocean.A small river named Duden flows
-              by their place and supplies it with the necessary regelialia.And
-              if she hasn’t been rewritten, then they are still using her.
-            </p>
-
-            <div class="pt-5 categories_tags">
-              <p>
-                Categories: <a href="#">Design</a>, <a href="#">Events</a> Tags:
-                <a href="#">#html</a>, <a href="#">#trends</a>
-              </p>
-            </div>
 
             <div class="post-single-navigation d-flex align-items-stretch">
               <a href="#" class="mr-auto w-50 pr-4">
