fix: index.html 푸터 텍스트, 아이콘 중앙정렬

--- a/index.html
+++ b/index.html
@@ -771,8 +771,16 @@
               </p>
             </div> -->
             <div class="widget">
-              <h3>Connect with us</h3>
-              <ul class="social list-unstyled">
+              <h3 style="text-align: center">Connect with us</h3>
+              <ul
+                class="social list-unstyled"
+                style="
+                  display: flex;
+                  justify-content: center;
+                  gap: 10px;
+                  padding: 0;
+                "
+              >
                 <li>
                   <a href="#"><span class="icon-facebook"></span></a>
                 </li>
