--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Style Free HTML Template by Untree.co</title>
+    <title>Essence Slog Club</title>
   </head>
   <body scroll="no">
     <!-- <div class="lines-wrap">
