fix: 홈화면 수정사항 반영, 불필요한 아이콘제거, h3 타이틀 제거

--- a/index.html
+++ b/index.html
@@ -693,7 +693,7 @@
           </div>
 
           <div class="col-md-6 mb-5 mb-lg-0 col-lg-4">
-            <div class="blog_entry">
+            <div class="blog_entry">n
               <a href="single.html"
                 ><img
                   src="images/img_h_5-min.jpg"
@@ -771,7 +771,7 @@
               </p>
             </div> -->
             <div class="widget">
-              <h3 style="text-align: center">Connect with us</h3>
+              <!-- <h3 style="text-align: center">Connect with us</h3> -->
               <ul
                 class="social list-unstyled"
                 style="
@@ -781,20 +781,23 @@
                   padding: 0;
                 "
               >
-                <li>
+                <!-- <li>
                   <a href="#"><span class="icon-facebook"></span></a>
                 </li>
                 <li>
                   <a href="#"><span class="icon-twitter"></span></a>
-                </li>
+                </li> -->
                 <li>
                   <a href="#"><span class="icon-instagram"></span></a>
                 </li>
-                <li>
+                <!-- <li>
                   <a href="#"><span class="icon-dribbble"></span></a>
                 </li>
                 <li>
                   <a href="#"><span class="icon-linkedin"></span></a>
+                </li> -->
+                <li>
+                  <a href="#"><span class="icon-chat"></span></a>
                 </li>
               </ul>
             </div>
