fix: html title 수정

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>ESC.CLUB</title>
+    <title>Essence Slog Club</title>
   </head>
   <body>
     <div class="site-mobile-menu site-navbar-target">
@@ -56,8 +56,7 @@
             <h1 class="hero-heading">About us</h1>
             <div class="line js-line mx-auto mb-3 my-3"></div>
             <p class="sub-text">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts.
+              ESC는 많은 분들의 도움으로 태어날 수 있었습니다.
             </p>
           </div>
         </div>
