--- a/project2.html
+++ b/project2.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Style Free HTML Template by Untree.co</title>
+    <title>Essence Slog Club</title>
   </head>
   <body>
     <!-- END lines -->
