--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
-            <h4 class="font-weight-bold">Our Clients</h4>
+            <h4 class="font-weight-bold">Sponsor</h4>
             <div class="line my-3 mx-auto"></div>
           </div>
         </div>
@@ -142,7 +142,7 @@
       <div class="container">
         <div class="row mb-5 align-items-center">
           <div class="col-md-6">
-            <h2 class="font-weight-bold">Our Awesome Team</h2>
+            <h2 class="font-weight-bold">Team</h2>
             <div class="line my-3 me-auto"></div>
           </div>
           <div class="col-md-6 text-left text-md-right">
