--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Essence Slog Club</title>
+    <title>Essential Slog Club</title>
   </head>
   <body scroll="no">
     <!-- <div class="lines-wrap">
@@ -61,16 +61,12 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h1 class="hero-heading">Essence Slog Club</h1>
+            <h1 class="hero-heading">Essential Slog Club</h1>
             <div class="line js-line mx-auto mb-3 my-3"></div>
-            <p style="white-space: pre-wrap" class="sub-text">
-              트레바리 ‘어떤 브랜드가 살아남는가?’ 라는 클럽에서 만난 인연들이
-              함께 만들었으며, Slog(탐구, 시간이 오래걸리는 일을 열심히 묵묵히
-              하다) 라는 단어를 차용하여 ‘본질을 꾸준히 탐구하는 모임’의 뜻과
-              컴퓨터 키보드의 ‘esc⌨-> escape’를 의미합니다. 결국 우리 톱니 ⚙
-              바퀴 같은 인생은 본질을 탐구해야만 ‘탈출(escape)’할 수 있지
-              않을까? 라는 생각을 해보며 만들어진 클럽!
-            </p>
+            <p style="white-space: pre-wrap" class="sub-text">세상이 너무 빨리 변한다는 말도 이젠 진부하게 느껴집니다.</p>
+            <p style="white-space: pre-wrap" class="sub-text">답답해도 묵묵히 방망이를 깎는 노인처럼, <br/>어리석어 보여도 매일 조금씩 산을 옮기는 사람처럼</p>
+            <p style="white-space: pre-wrap" class="sub-text">몹시 바쁜 일상 속<br/>조그마한 탈출구가 되어,</p>
+            <p style="white-space: pre-wrap" class="sub-text">시간이 지나도 여전히 가치를 발하는 것들을 소개하겠습니다.</p>
           </div>
         </div>
       </div>
