--- a/portfolio.html
+++ b/portfolio.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Essence Slog Club</title>
+    <title>Essential Slog Club</title>
   </head>
   <body>
     <div class="lines-wrap">
