--- a/contact.html
+++ b/contact.html
@@ -35,14 +35,9 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
 
-    <title>Essence Slog Club</title>
+    <title>Essential Slog Club</title>
   </head>
   <body>
-    <div class="lines-wrap">
-      <div class="lines-inner">
-        <div class="lines"></div>
-      </div>
-    </div>
     <!-- END lines -->
 
     <div class="site-mobile-menu site-navbar-target">
@@ -63,8 +58,8 @@
             <h1 class="hero-heading">Contact us</h1>
             <div class="line js-line mx-auto mb-3 my-3"></div>
             <p class="sub-text">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts.
+              ESC는 가치와 가치를 잇습니다. 가치 잇는 일에 동참하고 싶으신 분은
+              아래 연락처를 통해 문의 바랍니다.
             </p>
           </div>
         </div>
@@ -74,45 +69,16 @@
     <div class="section-grey">
       <div class="container p-5">
         <div class="block">
-          <div class="row justify-content-center">
+          <div class="row">
             <div
               class="col-md-12 col-lg-12 pb-4"
               data-aos="fade-up"
               data-aos-delay="200"
             >
               <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-12">
                   <div
-                    class="service-2 no-shadow link horizontal d-flex active"
-                    data-aos="fade-left"
-                    data-aos-delay="0"
-                  >
-                    <div class="service-icon color-1 mb-4">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="16"
-                        height="16"
-                        fill="currentColor"
-                        class="bi bi-geo-alt-fill"
-                        viewBox="0 0 16 16"
-                      >
-                        <path
-                          d="M8 16s6-5.686 6-10A6 6 0 0 0 2 6c0 4.314 6 10 6 10zm0-7a3 3 0 1 1 0-6 3 3 0 0 1 0 6z"
-                        />
-                      </svg>
-                    </div>
-                    <!-- /.icon -->
-                    <div class="service-contents">
-                      <p>43 Raymouth Rd. Baltemoer, London 3910</p>
-                    </div>
-                    <!-- /.service-contents-->
-                  </div>
-                  <!-- /.service -->
-                </div>
-
-                <div class="col-lg-4">
-                  <div
-                    class="service-2 no-shadow link horizontal d-flex active"
+                    class="service-2 no-shadow link horizontal d-flex active justify-content-center"
                     data-aos="fade-left"
                     data-aos-delay="0"
                   >
@@ -139,9 +105,9 @@
                   <!-- /.service -->
                 </div>
 
-                <div class="col-lg-4">
+                <div class="col-lg-12">
                   <div
-                    class="service-2 no-shadow link horizontal d-flex active"
+                    class="service-2 no-shadow link horizontal d-flex active justify-content-center"
                     data-aos="fade-left"
                     data-aos-delay="0"
                   >
@@ -169,49 +135,13 @@
                   <!-- /.service -->
                 </div>
               </div>
-
-              <form>
-                <div class="row">
-                  <div class="col-6">
-                    <div class="form-group">
-                      <label class="text-black" for="fname">First name</label>
-                      <input type="text" class="form-control" id="fname" />
-                    </div>
-                  </div>
-                  <div class="col-6">
-                    <div class="form-group">
-                      <label class="text-black" for="lname">Last name</label>
-                      <input type="text" class="form-control" id="lname" />
-                    </div>
-                  </div>
-                </div>
-                <div class="form-group">
-                  <label class="text-black" for="email">Email address</label>
-                  <input type="email" class="form-control" id="email" />
-                </div>
-
-                <div class="form-group">
-                  <label class="text-black" for="message">Message</label>
-                  <textarea
-                    name=""
-                    class="form-control"
-                    id="message"
-                    cols="30"
-                    rows="5"
-                  ></textarea>
-                </div>
-
-                <button type="submit" class="btn btn-primary">
-                  Send Message
-                </button>
-              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
 
-    <div class="site-section">
+    <!-- <div class="site-section">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-6 text-center">
@@ -241,11 +171,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <div class="site-footer">
       <div class="container">
-        <div class="row justify-content-between">
+        <!-- <div class="row justify-content-between">
           <div class="col-lg-4">
             <div class="widget">
               <h3>About</h3>
@@ -318,7 +248,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </div> -->
 
         <div class="row justify-content-center text-center copyright">
           <div class="col-md-8">
