--- a/single.html
+++ b/single.html
@@ -12,11 +12,12 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="author" content="Untree.co" />
+    <meta name="author" content="chicken_dev" />
     <link rel="shortcut icon" href="favicon.png" />
 
-    <meta name="description" content="" />
-    <meta name="keywords" content="free template, bootstrap, bootstrap4" />
+    <meta name="description" content="ESCㅣ Essential Slog Club" />
+    <meta name="keywords" content="book, study, art" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
