--- a/project1.html
+++ b/project1.html
@@ -54,12 +54,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h1 class="hero-heading">VS Code Extensions for HTML</h1>
+            <h1 class="hero-heading">ESC, 시작.</h1>
             <div class="line js-line mx-auto mb-5 my-5"></div>
-            <p class="sub-text">
-              By Joefrey Mahusay <span class="mx-3">&bullet;</span> on Jun 13,
-              2021
-            </p>
+            <p class="sub-text">ESC (Essence Slog Club) 송년회 기록🌇</p>
           </div>
         </div>
       </div>
@@ -70,72 +67,31 @@
         <div class="row justify-content-center align-items-stretch">
           <article class="col-lg-8 order-lg-2 px-lg-5">
             <p>
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean.
+              평일 저녁 다들 퇴근하고 피곤할 만도 한데 삶과 일, 책과 브랜드, 사람과 관계 등 매번 다양한 주제로 대화가 이어진다. 나이와 직업 등은 서로 다르지만 진정성 있는 태도와 순수한 열정을 가지고 살아간다는 공통점이 있었다. 그런 분들이 함께할 수 있도록 연말을 맞아 1기부터 5기 및 게스트 분들까지 한자리에 모이는 송년회를 기획하게 됐습니다.
             </p>
-
+            <img
+              src="images/project1/project1-1.png"
+              alt="Image"
+              class="img-fluid"
+            />
             <p>
-              A small river named Duden flows by their place and supplies it
-              with the necessary regelialia. It is a paradisematic country, in
-              which roasted parts of sentences fly into your mouth.
+              석만님을 중심으로 기수별 TF멤버들이 하나둘씩 모여들었다. 한 달이 조금 넘는 시간동안 다들 바쁜 와중에도 틈틈히 준비했고, 12월 21일. 50여명의 사람들이 한 자리에 모였다.
             </p>
-
-            <h3>Even the all-powerful...</h3>
+            <img
+              src="images/project1/project1-2.png"
+              alt="Image"
+              class="img-fluid"
+            />
             <p>
-              Even the all-powerful Pointing has no control about the blind
-              texts it is an almost unorthographic life One day however a small
-              line of blind text by the name of Lorem Ipsum decided to leave for
-              the far World of Grammar.
+              따뜻하고 아름다웠던 페페쥬집과, 맛있는 음식들, 엄청난 브랜드에서 협찬해주신 풍성한 선물들과, 무엇보다 그 자리를 빛내준 사람들.
             </p>
-
+            <img
+              src="images/project1/project1-3.png"
+              alt="Image"
+              class="img-fluid"
+            />
             <p>
-              The Big Oxmox advised her not to do so, because there were
-              thousands of bad Commas, wild Question Marks and devious Semikoli,
-              but the Little Blind Text didn’t listen. She packed her seven
-              versalia, put her initial into the belt and made herself on the
-              way.
-            </p>
-
-            <p>
-              When she reached the first hills of the Italic Mountains, she had
-              a last view back on the skyline of her hometown Bookmarksgrove,
-              the headline of Alphabet Village and the subline of her own road,
-              the Line Lane. Pityful a rethoric question ran over her cheek,
-              then she continued her way.
-            </p>
-
-            <h3>On her way she met a copy</h3>
-            <p>
-              Separated they live in Bookmarksgrove right at the coast of the
-              Semantics, a large language ocean.
-            </p>
-            <p>
-              A small river named Duden flows by their place and supplies it
-              with the necessary regelialia.
-            </p>
-            <p>
-              And if she hasn’t been rewritten, then they are still using her.
-              On her way she met a copy. The copy warned the Little Blind Text,
-              that where it came from it would have been rewritten a thousand
-              times and everything that was left from its origin would be the
-              word "and" and the Little Blind Text should turn around and return
-              to its own, safe country.
-            </p>
-
-            <p>
-              But nothing the copy said could convince her and so it didn’t take
-              long until a few insidious Copy Writers ambushed her, made her
-              drunk with Longe and Parole and dragged her into their agency,
-              where they abused her for their.
-            </p>
-
-            <p>
-              Separated they live in Bookmarksgrove right at the coast of the
-              Semantics, a large language ocean.A small river named Duden flows
-              by their place and supplies it with the necessary regelialia.And
-              if she hasn’t been rewritten, then they are still using her.
+              행사를 위해 아낌없이 협찬해주신 브랜드들과 도움 주신 분들도 모두 너무 감사드립니다. 메리 크리스마스
             </p>
 
             <div class="pt-5 categories_tags">
@@ -155,312 +111,13 @@
                 12 Creative Designers Share Ideas About Web Design
               </a>
             </div>
-
-            <div class="pt-5">
-              <h3 class="mb-5">6 Comments</h3>
-              <ul class="comment-list">
-                <li class="comment">
-                  <div class="vcard bio">
-                    <img
-                      src="images/person_6-min.jpg"
-                      alt="Image placeholder"
-                    />
-                  </div>
-                  <div class="comment-body">
-                    <h3>Irish Smith</h3>
-                    <div class="meta">January 9, 2018 at 2:21pm</div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Pariatur quidem laborum necessitatibus, ipsam impedit
-                      vitae autem, eum officia, fugiat saepe enim sapiente iste
-                      iure! Quam voluptas earum impedit necessitatibus, nihil?
-                    </p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-                </li>
-
-                <li class="comment">
-                  <div class="vcard bio">
-                    <img
-                      src="images/person_5-min.jpg"
-                      alt="Image placeholder"
-                    />
-                  </div>
-                  <div class="comment-body">
-                    <h3>Christine Stewart</h3>
-                    <div class="meta">January 9, 2018 at 2:21pm</div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Pariatur quidem laborum necessitatibus, ipsam impedit
-                      vitae autem, eum officia, fugiat saepe enim sapiente iste
-                      iure! Quam voluptas earum impedit necessitatibus, nihil?
-                    </p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-
-                  <ul class="children">
-                    <li class="comment">
-                      <div class="vcard bio">
-                        <img
-                          src="images/person_4-min.jpg"
-                          alt="Image placeholder"
-                        />
-                      </div>
-                      <div class="comment-body">
-                        <h3>Chintan Patel</h3>
-                        <div class="meta">January 9, 2018 at 2:21pm</div>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipisicing
-                          elit. Pariatur quidem laborum necessitatibus, ipsam
-                          impedit vitae autem, eum officia, fugiat saepe enim
-                          sapiente iste iure! Quam voluptas earum impedit
-                          necessitatibus, nihil?
-                        </p>
-                        <p><a href="#" class="reply">Reply</a></p>
-                      </div>
-
-                      <ul class="children">
-                        <li class="comment">
-                          <div class="vcard bio">
-                            <img
-                              src="images/person_3-min.jpg"
-                              alt="Image placeholder"
-                            />
-                          </div>
-                          <div class="comment-body">
-                            <h3>John Doe</h3>
-                            <div class="meta">January 9, 2018 at 2:21pm</div>
-                            <p>
-                              Lorem ipsum dolor sit amet, consectetur
-                              adipisicing elit. Pariatur quidem laborum
-                              necessitatibus, ipsam impedit vitae autem, eum
-                              officia, fugiat saepe enim sapiente iste iure!
-                              Quam voluptas earum impedit necessitatibus, nihil?
-                            </p>
-                            <p><a href="#" class="reply">Reply</a></p>
-                          </div>
-
-                          <ul class="children">
-                            <li class="comment">
-                              <div class="vcard bio">
-                                <img
-                                  src="images/person_2-min.jpg"
-                                  alt="Image placeholder"
-                                />
-                              </div>
-                              <div class="comment-body">
-                                <h3>Ben Afflick</h3>
-                                <div class="meta">
-                                  January 9, 2018 at 2:21pm
-                                </div>
-                                <p>
-                                  Lorem ipsum dolor sit amet, consectetur
-                                  adipisicing elit. Pariatur quidem laborum
-                                  necessitatibus, ipsam impedit vitae autem, eum
-                                  officia, fugiat saepe enim sapiente iste iure!
-                                  Quam voluptas earum impedit necessitatibus,
-                                  nihil?
-                                </p>
-                                <p><a href="#" class="reply">Reply</a></p>
-                              </div>
-                            </li>
-                          </ul>
-                        </li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-
-                <li class="comment">
-                  <div class="vcard bio">
-                    <img
-                      src="images/person_1-min.jpg"
-                      alt="Image placeholder"
-                    />
-                  </div>
-                  <div class="comment-body">
-                    <h3>Jean Doe</h3>
-                    <div class="meta">January 9, 2018 at 2:21pm</div>
-                    <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                      Pariatur quidem laborum necessitatibus, ipsam impedit
-                      vitae autem, eum officia, fugiat saepe enim sapiente iste
-                      iure! Quam voluptas earum impedit necessitatibus, nihil?
-                    </p>
-                    <p><a href="#" class="reply">Reply</a></p>
-                  </div>
-                </li>
-              </ul>
-              <!-- END comment-list -->
-
-              <div class="comment-form-wrap pt-5">
-                <h3 class="mb-5">Leave a comment</h3>
-                <form action="#" class="">
-                  <div class="form-group">
-                    <label for="name">Name *</label>
-                    <input type="text" class="form-control" id="name" />
-                  </div>
-                  <div class="form-group">
-                    <label for="email">Email *</label>
-                    <input type="email" class="form-control" id="email" />
-                  </div>
-                  <div class="form-group">
-                    <label for="website">Website</label>
-                    <input type="url" class="form-control" id="website" />
-                  </div>
-
-                  <div class="form-group">
-                    <label for="message">Message</label>
-                    <textarea
-                      name="message"
-                      id="message"
-                      cols="30"
-                      rows="5"
-                      class="form-control"
-                    ></textarea>
-                  </div>
-                  <div class="form-group">
-                    <input
-                      type="submit"
-                      value="Post Comment"
-                      class="btn btn-primary btn-md"
-                    />
-                  </div>
-                </form>
-              </div>
-            </div>
           </article>
-
-          <div class="col-md-12 col-lg-1 order-lg-1">
-            <div class="share sticky-top">
-              <h3>Share</h3>
-              <ul class="list-unstyled share-article">
-                <li>
-                  <a href="#"><span class="icon-facebook"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-twitter"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-pinterest"></span></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-3 mb-5 mb-lg-0 order-lg-3">
-            <div class="mb-4">
-              <a
-                href="https://vimeo.com/342333493"
-                data-fancybox
-                class="video-wrap"
-              >
-                <span class="play-wrap"><span class="icon-play"></span></span>
-                <img
-                  src="images/img_h_5-min.jpg"
-                  alt="Image"
-                  class="img-fluid rounded"
-                />
-              </a>
-            </div>
-
-            <div class="share floating-block sticky-top">
-              <h2 class="mb-3 text-black">Subscribe to Newsletter</h2>
-              <p>Far far away behind the word mountains far from.</p>
-              <form action="#">
-                <input
-                  type="email"
-                  class="form-control mb-2"
-                  placeholder="Enter email"
-                />
-                <input
-                  type="submit"
-                  value="Subscribe"
-                  class="btn btn-primary btn-block"
-                />
-              </form>
-            </div>
-          </div>
         </div>
       </div>
     </div>
 
     <div class="site-footer">
       <div class="container">
-        <div class="row justify-content-between">
-          <div class="col-lg-4">
-            <div class="widget">
-              <h3>About</h3>
-              <p>
-                Far far away, behind the word mountains, far from the countries
-                Vokalia and Consonantia, there live the blind texts. Separated
-                they live.
-              </p>
-            </div>
-            <div class="widget">
-              <h3>Connect with us</h3>
-              <ul class="social list-unstyled">
-                <li>
-                  <a href="#"><span class="icon-facebook"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-twitter"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-instagram"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-dribbble"></span></a>
-                </li>
-                <li>
-                  <a href="#"><span class="icon-linkedin"></span></a>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-6">
-            <div class="row">
-              <div class="col-12">
-                <div class="widget">
-                  <h3>Navigations</h3>
-                </div>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4">
-                <div class="widget">
-                  <ul class="links list-unstyled">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Work</a></li>
-                    <li><a href="#">Process</a></li>
-                    <li><a href="#">About Us</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4">
-                <div class="widget">
-                  <ul class="links list-unstyled">
-                    <li><a href="#">Press</a></li>
-                    <li><a href="#">Blog</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Privacy</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-6 col-sm-6 col-md-4">
-                <div class="widget">
-                  <ul class="links list-unstyled">
-                    <li><a href="#">Privacy</a></li>
-                    <li><a href="#">FAQ</a></li>
-                    <li><a href="#">Careers</a></li>
-                    <li><a href="#">Process</a></li>
-                    <li><a href="#">About Us</a></li>
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
         <div class="row justify-content-center text-center copyright">
           <div class="col-md-8">
             <p>
